[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Player/adventurer-1.3-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Silkscreen-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sounds and Music/03_Step_grass_03.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 18.0

[sub_resource type="Animation" id=6]
resource_name = "Fall"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Slide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28 ]
}

[sub_resource type="Curve" id=9]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.950739, 60.8108 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.968469 ), 0.0, 0.0, 0, 0, Vector2( 0.997537, 0.734234 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.0027933, 0.734637, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=8]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 12
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Fall = SubResource( 6 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 4 )
anims/RESET = SubResource( 3 )
anims/Run = SubResource( 5 )
anims/Slide = SubResource( 7 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DownSlopeRay" type="RayCast2D" parent="."]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RunningParticles" type="CPUParticles2D" parent="."]
position = Vector2( -2, 16 )
z_index = 1
lifetime = 0.5
lifetime_randomness = 0.5
local_coords = false
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2( -1, -0.6 )
spread = 20.0
initial_velocity = 75.0
damping = 80.0
damping_curve = SubResource( 9 )
scale_amount = 1.5
scale_amount_curve = SubResource( 10 )
color_ramp = SubResource( 11 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="DistanceText" type="Label" parent="HUD"]
margin_left = 47.0
margin_top = 28.0
margin_right = 87.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 8 )
text = "Distance: 0.0 m"

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="timeout" from="JumpBuffer" to="." method="_on_JumpBuffer_timeout"]
